# argus

./: .dockerignore  .env.example  CHANGELOG.md  CLAUDE.md  CONCEPT.md  README.md  _docker_preflight.sh  _model_entrypoint.sh  docker-compose.yml  pyproject.toml  run_debug.sh  run_server.sh
.claude/: settings.json
.claude/hooks/moai/: handle-agent-hook.sh  handle-compact.sh  handle-config-change.sh  handle-cwd-changed.sh  handle-elicitation-result.sh  handle-elicitation.sh  handle-file-changed.sh  handle-instructions-loaded.sh  handle-notification.sh  handle-permission-denied.sh  handle-permission-request.sh  handle-post-compact.sh  handle-post-tool-failure.sh  handle-post-tool.sh  handle-pre-tool.sh  handle-session-end.sh  handle-session-start.sh  handle-stop-failure.sh  handle-stop.sh  handle-subagent-start.sh  handle-subagent-stop.sh  handle-task-completed.sh  handle-task-created.sh  handle-teammate-idle.sh  (+3 more)
.moai/: manifest.json
.moai/project/: interview.md  product.md  structure.md  tech.md
.moai/reports/: sync-report-2026-06-04T22-53.md  sync-report-2026-06-05-SPEC-UI-001.md
.moai/state/: db-detection.json
api/: Dockerfile  __init__.py  inference.py  main.py  requirements.txt  security.py  state.py
api/tests/: conftest.py  test_inference.py  test_main_routes.py  test_middleware.py  test_security.py  test_state.py  test_static_spa.py
tests/integration/: conftest.py  test_docker_stack.py
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css
(+32 files in other folders)
