[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-api"
version = "0.1.0"
description = "Argus on-device Llama 4 runtime — FastAPI backend"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "abjohn" }]
dependencies = [
    "fastapi>=0.115,<0.200",
    "uvicorn[standard]>=0.30,<0.40",
    "httpx>=0.27,<0.30",
    "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<7",
    "respx>=0.21,<1",
    "ruff",
    "black",
    "isort",
]

[tool.setuptools.packages.find]
include = ["api*"]
exclude = ["tests*", "api.tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["api/tests", "tests/integration"]
asyncio_mode = "auto"
markers = [
    "unit: hermetic unit tests (no network, no Docker)",
    "integration: requires Docker; skipped without it",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["api"]
omit = ["api/tests/*"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
